# animus2

./: .pre-commit-config.yaml  Cargo.toml  rustfmt.toml
src/: channel.rs  lib.rs
src/ambit/: mod.rs  packet.rs  plugin.rs
src/chat/: entity.rs  mod.rs  packet.rs  system.rs
src/client/: camera.rs
src/id/: mod.rs
src/network/: accept.rs  client.rs  connection.rs  error.rs  event.rs  mediator.rs  mod.rs  packet.rs  plugin.rs  server.rs  shared.rs  socket.rs  task.rs
src/network/task/: accept.rs  mod.rs  recv.rs  send.rs
src/path/: mod.rs  packet.rs  plugin.rs
src/stat/: mod.rs
src/time/: mod.rs  packet.rs  schedule.rs  tick.rs
