[package]
name = "animus-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
derive_more = "0.99.17"
enum-kinds = "0.5.1"
futures = "0.3.25"
proxy-enum = "0.3.1"
quinn = "0.9.0"
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["dangerous_configuration", "quic"] }
speedy = "0.8.3"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


[dev-dependencies]
anyhow = "1.0.65"
rstest = "0.15.0"
tokio = { version = "1.21.2", features = ["full", "test-util"] }
tokio-test = "0.4.2"
tracing-test = "0.2.3"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
